2003-03-28  Serg Stoyan  <stoyan@on.com.ua>

	* Source/NSMenuView.m:
	(attachSubmenuForItemAtIndex:): Documentation comment moved to 
	NSMenuView.h.
	(indexOfItemAtPoint:): ditto.
	(locationForSubmenu:): ditto.
	(trackWithEvent:): ditto.
	(setWindowFrameForAttachingToRect:): Removed "move menu to the screen"
	TODO since it is out of this method scope.
	
	* Headers/NSMenuView.m: Added documentation for almost all methods.
	Cleanup.
	
2003-03-27 23:52  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSMatrix.m (-setSelectionFrom:to:anchor:highlight:): Update
	the selection related ivars after changing the selection.

2003-03-27  Serg Stoyan  <stoyan@on.com.ua>

	* Source/NSMenuView.m:
	([NSMenuWindowTitleView createButton:]): Made imageSize an ivar and 
	removed	declaration. Made rect setting with NSMakeRect().
	([NSMenuWindowTitleView addCloseButton:]): Added button location update.
	(initWithFrame:): Title adding moved int update method.
	(setWindowFrameForAttachingToRect:): Title removing moved into update 
	method. Call update instead sizeToFit.
	
	* Source/NSMenu.m: 
	(initWithTitle:): Create NSMenuView with NSZeroRect frame.
	(insertItem:atIndex): removed [menu update] call, because itemChanged:
	calls it.
	(removeItemAtIndex:): ditto.
	(sizeToFit:): Added NSMenuView update. Removed [_view sizeToFit], 
	beacuse [_view update] calls it. Don't set window's origin if size less
	than 1 (window is just created).
	(display): Removed [self update] call (sizeToFit calls it). Reformatting.
	Do not call setGeometry if menu is owned by popup.
	(close): Removed [self update] call.
	(closeTransient): ditto.
	
2003-03-18 Benhur Stein <benhur@inf.ufsm.br>

        * Fix mouse tracking in NSMatrix
	* Headers/gnustep/gui/NSMatrix.h: Change _keyCell ivar to _reserved1.
        * Source/NSMatrix.m (-_setKeyRow:column:): New method
        (-_selectCell:atRow:column:): Use it.
        (-setSelectionFrom:to:anchor:highlight:): Rewrite.